--- a/finalWebpage/mensPage.html
+++ b/finalWebpage/mensPage.html
@@ -22,7 +22,7 @@
        <div class="inventory">
         <div class="item">
            <a href="itemDisplay.html"> <img src="threadsImages/greyShirt1.jpg" ></a>
-            <h2>Grey Athelitic Shirt</h2>
+            <h2>Grey Athletic Shirt</h2>
             <h3>$15.00</h3>
         </div>
         <div class="item1">
