--- a/finalWebpage/mensPages/mensBottomsDisplay.html
+++ b/finalWebpage/mensPages/mensBottomsDisplay.html
@@ -6,6 +6,7 @@
 
         <title>Threads Clothing</title>
         <link rel="stylesheet" href="../threadsCSS.css">
+        <script src="../displayItem.js" defer></script>
     </head>
 
     <body>
@@ -18,15 +19,19 @@
                 <button id="shoppingCart">Shopping Cart</button>
             </div>
         </header>
+    <!---item inventory-->
+        <div id="bottomItems" class="bottomItems">
+        
         <h2 id="mensPageTitle">Mens Shorts and Pants</h2>
        <div class="inventory">
         <div class="item">
-           <a href="mensItemDisplay.html"> <img src="../threadsImages/mensBottoms/frontBlueJeans.jpg" alt="Blue jeans"></a>
-            <h2>Blue Jeans</h2>
+          <!-- <a href="mensItemDisplay.html"> <img   id="blueJeans" src="../threadsImages/mensBottoms/frontBlueJeans.jpg" alt="Blue jeans"></a>-->
+          <img   id="blueJeans" src="../threadsImages/mensBottoms/frontBlueJeans.jpg" alt="Blue jeans">
+          <h2>Blue Jeans</h2>
             <h3>$15.00</h3>
         </div>
         <div class="item1">
-            <img src="../threadsImages/mensBottoms/frontShorts.jpg"  alt="Tan Shorts">
+            <img id="tanShorts" src="../threadsImages/mensBottoms/frontShorts.jpg"  alt="Tan Shorts">
             <h2>Tan Shorts</h2>
             <h3>$30.00</h3>
         </div>
@@ -36,6 +41,32 @@
             <h3>$40.00</h3>
         </div>
     </div>
+</div>
+ <!---item display-->
+<div id="displayItem" class="displayItem">
+    <h2 id="pageLocation">Mens/Grey Shirt</h2>
+    <div class="itemDisplay">
+
+        <div class="pictures">
+            <div class="extraPictures">
+                <img id="image3" src="../threadsImages/mensTops/greyShirt2.jpg">
+                <img id="image2" src="../threadsImages/mensTops/greyShirt3.jpg">
+            </div>
+            <div class="itemPicture">
+                <img id="image1" src="../threadsImages/mensTops/greyShirt1.jpg">
+            </div>
+            
+        </div>
+        <div class="itemInfo">
+            <h2 id="itemTitle">Grey Athletic Shirt</h2>
+            <h3 id="Price">$15.00</h3>
+            <button id="addCart">Add to Cart</button>
+            <h2 id="description">Description</h2>
+            <p id="pDescription">This is a grey Athletic DRi-Fit shirt. The materials that it consists of are polyster,cotton, and nylon.
+            </p>
+        </div>
+    </div>
+</div>
 
         <footer>
             <div class="row1">
