--- a/finalWebpage/mensPages/mensBottomsDisplay.html
+++ b/finalWebpage/mensPages/mensBottomsDisplay.html
@@ -20,12 +20,12 @@
             </div>
         </header>
     <!---item inventory-->
-        <div id="bottomItems" class="bottomItems">
+        <div id="inventory" class="bottomItems">
         
         <h2 id="mensPageTitle">Mens Shorts and Pants</h2>
        <div class="inventory">
         <div class="item">
-          <!-- <a href="mensItemDisplay.html"> <img   id="blueJeans" src="../threadsImages/mensBottoms/frontBlueJeans.jpg" alt="Blue jeans"></a>-->
+         
           <img   id="blueJeans" src="../threadsImages/mensBottoms/frontBlueJeans.jpg" alt="Blue jeans">
           <h2>Blue Jeans</h2>
             <h3>$15.00</h3>
