--- a/finalWebpage/mensPages/mensItemDisplay.html
+++ b/finalWebpage/mensPages/mensItemDisplay.html
@@ -19,7 +19,7 @@
         </div>
     </header>
     <h2 id="mensPageTitle">Mens Clothes</h2>
-    <div class="inventory">
+    <div id="inventory" class="inventory">
         <div class="item">
             <a href="../mensItemsPages/greyShirt.html"> <img src="../threadsImages/mensTops/greyShirt1.jpg" alt="Folded grey shirt"></a>
             <h2>Grey Athletic Shirt</h2>
@@ -36,8 +36,7 @@
             <h3>$19.00</h3>
         </div>
         <div class="item3">
-            <a href="../mensItemsPages/redirectExample.html"> <img src="../threadsImages/mensBottoms/frontBlueJeans.jpg"
-                    alt="Blue jeans"></a>
+             <img id="blueJeans" src="../threadsImages/mensBottoms/frontBlueJeans.jpg" alt="Blue jeans">
             <h2>Blue Jeans</h2>
             <h3>$15.00</h3>
         </div>
@@ -70,7 +69,31 @@
             <h3>$80.00</h3>
         </div>
     </div>
-
+    <!---item display-->
+    <div id="displayItem" class="displayItem">
+        <h2 id="pageLocation">Mens/Grey Shirt</h2>
+        <div class="itemDisplay">
+    
+            <div class="pictures">
+                <div class="extraPictures">
+                    <img id="image3" src="../threadsImages/mensTops/greyShirt2.jpg">
+                    <img id="image2" src="../threadsImages/mensTops/greyShirt3.jpg">
+                </div>
+                <div class="itemPicture">
+                    <img id="image1" src="../threadsImages/mensTops/greyShirt1.jpg">
+                </div>
+                
+            </div>
+            <div class="itemInfo">
+                <h2 id="itemTitle">Grey Athletic Shirt</h2>
+                <h3 id="Price">$15.00</h3>
+                <button id="addCart">Add to Cart</button>
+                <h2 id="description">Description</h2>
+                <p id="pDescription">This is a grey Athletic DRi-Fit shirt. The materials that it consists of are polyster,cotton, and nylon.
+                </p>
+            </div>
+        </div>
+    </div>
 
     <footer>
         <div class="row1">
