--- a/finalWebpage/mensPages/mensBottomsDisplay.html
+++ b/finalWebpage/mensPages/mensBottomsDisplay.html
@@ -6,16 +6,30 @@
 
         <title>Threads Clothing</title>
         <link rel="stylesheet" href="../threadsCSS.css">
-        <script src="../displayItem.js" defer></script>
+        <script src="../mensBottomItems.js" defer></script>
     </head>
 
     <body>
 
         <header id="headerMensPage">
             <div class="navBar">
-                <a id="mensLink" href="mensItemDisplay.html">Mens</a>
+                <div class="mensDropdown">
+                    <a id="mensLink" href="mensItemDisplay.html">Mens</a>
+                    <div class="mensDDContent">
+                        <a href="mensTopsDisplay.html">Tops</a>
+                        <a href="mensBottomsDisplay.html">Bottoms</a>
+                        <a href="mensShoesDisplay.html">Shoes</a>
+                    </div>
+                </div>
                 <a id="websiteTitle" href="../threadsHomePage.html">T<span class="underline">HREA</span>DS</a>
-                <a id="womensLink" href="../womensPages/womensItemsPage.html">Womens</a>
+                <div class="womensDropdown">
+                    <a id="womensLink" href="../womensPages/womensItemsPage.html">Womens</a>
+                    <div class="womensDDContent">
+                        <a href="../womensPages/womensTopsDisplay.html">Tops</a>
+                        <a href="../womensPages/womensBottomsDisplay.html">Bottoms</a>
+                        <a href="../womensPages/womensShoesDisplay.html">Shoes</a>
+                    </div>
+                </div>
                 <button id="shoppingCart">Shopping Cart</button>
             </div>
         </header>
@@ -26,7 +40,7 @@
        <div class="inventory">
         <div class="item">
          
-          <img   id="blueJeans" src="../threadsImages/mensBottoms/frontBlueJeans.jpg" alt="Blue jeans">
+          <img id="blueJeans" src="../threadsImages/mensBottoms/frontBlueJeans.jpg" alt="Blue jeans">
           <h2>Blue Jeans</h2>
             <h3>$15.00</h3>
         </div>
@@ -36,7 +50,7 @@
             <h3>$30.00</h3>
         </div>
         <div class="item2">
-            <img src="../threadsImages/mensBottoms/frontPants.jpg"  alt="Tan Pants">
+            <img id="tanPants" src="../threadsImages/mensBottoms/frontPants.jpg"  alt="Tan Pants">
             <h2>Tan Pants</h2> 
             <h3>$40.00</h3>
         </div>
@@ -49,7 +63,7 @@
 
         <div class="pictures">
             <div class="extraPictures">
-                <img id="image3" src="../threadsImages/mensTops/greyShirt2.jpg">
+                
                 <img id="image2" src="../threadsImages/mensTops/greyShirt3.jpg">
             </div>
             <div class="itemPicture">
