--- a/finalWebpage/mensPages/mensShoesDisplay.html
+++ b/finalWebpage/mensPages/mensShoesDisplay.html
@@ -1,64 +1,105 @@
 <!DOCTYPE html>
-    <html lang="en">
+<html lang="en">
 
-    <head>
-        <meta charset="UTF-8">
+<head>
+    <meta charset="UTF-8">
 
-        <title>Threads Clothing</title>
-        <link rel="stylesheet" href="../threadsCSS.css">
-    </head>
+    <title>Threads Clothing</title>
+    <link rel="stylesheet" href="../threadsCSS.css">
+    <script src="../mensShoeItems.js" defer></script>
+</head>
 
-    <body>
+<body>
 
-        <header id="headerMensPage">
-            <div class="navBar">
+    <header id="headerMensPage">
+        <div class="navBar">
+            <div class="mensDropdown">
                 <a id="mensLink" href="mensItemDisplay.html">Mens</a>
-                <a id="websiteTitle" href="../threadsHomePage.html">T<span class="underline">HREA</span>DS</a>
-                <a id="womensLink" href="../womensPages/womensItemsPage.html">Womens</a>
-                <button id="shoppingCart">Shopping Cart</button>
+                <div class="mensDDContent">
+                    <a href="mensTopsDisplay.html">Tops</a>
+                    <a href="mensBottomsDisplay.html">Bottoms</a>
+                    <a href="mensShoesDisplay.html">Shoes</a>
+                </div>
             </div>
-        </header>
-        <h2 id="mensPageTitle">Mens Clothes</h2>
-       <div class="inventory">
+            <a id="websiteTitle" href="../threadsHomePage.html">T<span class="underline">HREA</span>DS</a>
+            <div class="womensDropdown">
+                <a id="womensLink" href="../womensPages/womensItemsPage.html">Womens</a>
+                <div class="womensDDContent">
+                    <a href="../womensPages/womensTopsDisplay.html">Tops</a>
+                    <a href="../womensPages/womensBottomsDisplay.html">Bottoms</a>
+                    <a href="../womensPages/womensShoesDisplay.html">Shoes</a>
+                </div>
+            </div>
+            <button id="shoppingCart">Shopping Cart</button>
+        </div>
+    </header>
+    <h2 id="mensPageTitle">Mens Clothes</h2>
+
+    <div id="inventory" class="inventory">
         <div class="item">
-           <a href="mensItemDisplay.html"> <img src="../threadsImages/mensShoes/frontTurfShoes.jpg" alt="Turf Shoes"></a>
+             <img id="turfShoes"src="../threadsImages/mensShoes/frontTurfShoes.jpg" alt="Turf Shoes"></a>
             <h2>Turf Shoes</h2>
             <h3>$99.00</h3>
         </div>
         <div class="item1">
-            <img src="../threadsImages/mensShoes/brownShoes.jpg"  alt="Brown casual shoes">
+            <img id="brownShoes" src="../threadsImages/mensShoes/brownShoes.jpg" alt="Brown casual shoes">
             <h2>Brown Shoes</h2>
             <h3>$10.00</h3>
         </div>
         <div class="item2">
-            <img src="../threadsImages/mensShoes/frontRunningShoes.jpg"  alt="running shoes">
+            <img id="runningShoes" src="../threadsImages/mensShoes/frontRunningShoes.jpg" alt="running shoes">
             <h2>Striped Running Shoes</h2>
-             <h3>$80.00</h3>
+            <h3>$80.00</h3>
         </div>
     </div>
+    <!---item display-->
+    <div id="displayItem" class="displayItem">
+        <h2 id="pageLocation">Mens Shoes</h2>
+        <div class="itemDisplay">
 
-        <footer>
-            <div class="row1">
-                <h3>About</h3>
-                When We Started<br>
-                How We Started<br>
+            <div class="pictures">
+                <div class="extraPictures">
+                    <img id="image3" src="../threadsImages/mensTops/greyShirt2.jpg">
+                    <img id="image2" src="../threadsImages/mensTops/greyShirt3.jpg">
+                </div>
+                <div class="itemPicture">
+                    <img id="image1" src="../threadsImages/mensTops/greyShirt1.jpg">
+                </div>
 
             </div>
-            <div class="row2">
-                <h3>Customer Service</h3>
-                Contact Us<br>
+            <div class="itemInfo">
+                <h2 id="itemTitle">Grey Athletic Shirt</h2>
+                <h3 id="Price">$15.00</h3>
+                <button id="addCart">Add to Cart</button>
+                <h2 id="description">Description</h2>
+                <p id="pDescription">This is a grey Athletic DRi-Fit shirt. The materials that it consists of are
+                    polyster,cotton, and nylon.
+                </p>
             </div>
-            <div class="row3">
-                <h3>Social Media</h3>
-                <a href="https://twitter.com/intent/tweet?button_hashtag=link&ref_src=twsrc%5Etfw"
-                    class="twitter-hashtag-button">Tweet #link</a>
-                <a href=>Instagram</a>
-                <a href=>snapchat</a>
-                <a href=>facebook</a>
-            </div>
+        </div>
+    </div>
+    <footer>
+        <div class="row1">
+            <h3>About</h3>
+            When We Started<br>
+            How We Started<br>
 
-        </footer>
+        </div>
+        <div class="row2">
+            <h3>Customer Service</h3>
+            Contact Us<br>
+        </div>
+        <div class="row3">
+            <h3>Social Media</h3>
+            <a href="https://twitter.com/intent/tweet?button_hashtag=link&ref_src=twsrc%5Etfw"
+                class="twitter-hashtag-button">Tweet #link</a>
+            <a href=>Instagram</a>
+            <a href=>snapchat</a>
+            <a href=>facebook</a>
+        </div>
+
+    </footer>
 
 
 
-    </body>
+</body>
