--- a/finalWebpage/womensPages/womensTopsDisplay.html
+++ b/finalWebpage/womensPages/womensTopsDisplay.html
@@ -1,64 +1,104 @@
 <!DOCTYPE html>
-    <html lang="en">
+<html lang="en">
 
-    <head>
-        <meta charset="UTF-8">
+<head>
+    <meta charset="UTF-8">
 
-        <title>Threads Clothing</title>
-        <link rel="stylesheet" href="../threadsCSS.css">
-    </head>
+    <title>Threads Clothing</title>
+    <link rel="stylesheet" href="../threadsCSS.css">
+<script src="../womensTops.js" defer> </script>
+</head>
 
-    <body>
+<body>
 
-        <header id="headerMensPage">
-            <div class="navBar">
+    <header id="headerMensPage">
+        <div class="navBar">
+            <div class="mensDropdown">
                 <a id="mensLink" href="../mensPages/mensItemDisplay.html">Mens</a>
-                <a id="websiteTitle" href="../threadsHomePage.html" >T<span class="underline">HREA</span>DS</a>
-                <a id="womensLink" href="womensItemsPage.html">Womens</a>
-                <button id="shoppingCart">Shopping Cart</button>
+                <div class="mensDDContent">
+                    <a href="../mensPages/mensTopsDisplay.html">Tops</a>
+                    <a href="../mensPages/mensBottomsDisplay.html">Bottoms</a>
+                    <a href="../mensPages/mensShoesDisplay.html">Shoes</a>
+                </div>
             </div>
-        </header>
-        <h2 id="mensPageTitle">Womens Tops</h2>
-       <div class="inventory">
-        <div class="item">
-           <a href="mensItemDisplay.html"> <img src="../threadsImages/womensTops/noOneCaresWomansTop.jpg" alt="white shirt that says no one cares"></a>
+            <a id="websiteTitle" href="../threadsHomePage.html">T<span class="underline">HREA</span>DS</a>
+            <div class="womensDropdown">
+                <a id="womensLink" href="womensItemsPage.html">Womens</a>
+                <div class="womensDDContent">
+                    <a href="womensTopsDisplay.html">Tops</a>
+                    <a href="womensBottomsDisplay.html">Bottoms</a>
+                    <a href="womensShoesDisplay.html">Shoes</a>
+                </div>
+            </div>
+            <button id="shoppingCart">Shopping Cart</button>
+        </div>
+    </header>
+    <h2 id="mensPageTitle">Womens Tops</h2>
+    <div id="inventory" class="inventory">
+        <div id="inventory" class="item">
+            <img id="noOneCaresWomansTop" src="../threadsImages/womensTops/noOneCaresWomansTop.jpg" alt="white shirt that says no one cares">
             <h2>No One Cares shirt</h2>
             <h3>$13.00</h3>
         </div>
         <div class="item1">
-            <img src="../threadsImages/womensTops/womansBlueTop.jpg"  alt="womans blue top">
+            <img id="blueShirt" src="../threadsImages/womensTops/womansBlueTop.jpg" alt="womans blue top">
             <h2>Blue Shirt</h2>
             <h3>$16.00</h3>
         </div>
         <div class="item2">
-            <img src="../threadsImages/womensTops/womansCokeTop.jpg"  alt="Coca Cola top">
+            <img id="cokeTop" src="../threadsImages/womensTops/womansCokeTop.jpg" alt="Coca Cola top">
             <h2>Coke top</h2>
             <h3>$10.00</h3>
         </div>
     </div>
+    <!---item display-->
+    <div id="displayItem" class="displayItem">
+        <h2 id="pageLocation">Womens Tops</h2>
+        <div class="itemDisplay">
 
-        <footer>
-            <div class="row1">
-                <h3>About</h3>
-                When We Started<br>
-                How We Started<br>
+            <div class="pictures">
+                <div class="extraPictures">
+                   
+                </div>
+                <div class="itemPicture">
+                    <img id="image1" src="../threadsImages/mensTops/greyShirt1.jpg">
+                </div>
 
             </div>
-            <div class="row2">
-                <h3>Customer Service</h3>
-                Contact Us<br>
+            <div class="itemInfo">
+                <h2 id="itemTitle">Grey Athletic Shirt</h2>
+                <h3 id="Price">$15.00</h3>
+                <button id="addCart">Add to Cart</button>
+                <h2 id="description">Description</h2>
+                <p id="pDescription">This is a grey Athletic DRi-Fit shirt. The materials that it consists of are
+                    polyster,cotton, and nylon.
+                </p>
             </div>
-            <div class="row3">
-                <h3>Social Media</h3>
-                <a href="https://twitter.com/intent/tweet?button_hashtag=link&ref_src=twsrc%5Etfw"
-                    class="twitter-hashtag-button">Tweet #link</a>
-                <a href=>Instagram</a>
-                <a href=>snapchat</a>
-                <a href=>facebook</a>
-            </div>
+        </div>
+    </div>
 
-        </footer>
+    <footer>
+        <div class="row1">
+            <h3>About</h3>
+            When We Started<br>
+            How We Started<br>
+
+        </div>
+        <div class="row2">
+            <h3>Customer Service</h3>
+            Contact Us<br>
+        </div>
+        <div class="row3">
+            <h3>Social Media</h3>
+            <a href="https://twitter.com/intent/tweet?button_hashtag=link&ref_src=twsrc%5Etfw"
+                class="twitter-hashtag-button">Tweet #link</a>
+            <a href=>Instagram</a>
+            <a href=>snapchat</a>
+            <a href=>facebook</a>
+        </div>
+
+    </footer>
 
 
 
-    </body>
+</body>
