fixes for final commit

--- a/finalWebpage/mensPages/mensTopsDisplay.html
+++ b/finalWebpage/mensPages/mensTopsDisplay.html
@@ -59,8 +59,7 @@
 
         <div class="pictures">
             <div class="extraPictures">
-                <img id="image3" src="../threadsImages/mensTops/greyShirt2.jpg">
-                <img id="image2" src="../threadsImages/mensTops/greyShirt3.jpg">
+                <img id="image2" src="../threadsImages/white.jpg">
             </div>
             <div class="itemPicture">
                 <img id="image1" src="../threadsImages/mensTops/greyShirt1.jpg">
@@ -91,11 +90,10 @@
         </div>
         <div class="row3">
             <h3>Social Media</h3>
-            <a href="https://twitter.com/intent/tweet?button_hashtag=link&ref_src=twsrc%5Etfw"
-                class="twitter-hashtag-button">Tweet #link</a>
-            <a href=>Instagram</a>
-            <a href=>snapchat</a>
-            <a href=>facebook</a>
+            <a href="../threadsImages/https://twitter.com/explore"> <img src="../threadsImages/twitter.jpg" alt="twitter"></a>
+            <a href="../threadsImages/https://www.snapchat.com/"><img src="../threadsImages/snapchat.png" alt="snapchat"></a>
+            <a href="../threadsImages/https://www.facebook.com/"><img src="../threadsImages/facebook.png" alt="facebook"></a>
+            <a href="../threadsImages/https://www.instagram.com/"> <img src="../threadsImages/instagram.jpg" alt="Instagram"></a>
         </div>
 
     </footer>
