--- a/finalWebpage/womensPages/womensShoesDisplay.html
+++ b/finalWebpage/womensPages/womensShoesDisplay.html
@@ -89,11 +89,10 @@
         </div>
         <div class="row3">
             <h3>Social Media</h3>
-            <a href="https://twitter.com/intent/tweet?button_hashtag=link&ref_src=twsrc%5Etfw"
-                class="twitter-hashtag-button">Tweet #link</a>
-            <a href=>Instagram</a>
-            <a href=>snapchat</a>
-            <a href=>facebook</a>
+            <a href="https://twitter.com/explore"> <img src="../threadsImages/twitter.jpg" alt="twitter"></a>
+            <a href="https://www.snapchat.com/"><img src="../threadsImages/snapchat.png" alt="snapchat"></a>
+            <a href="https://www.facebook.com/"><img src="../threadsImages/facebook.png" alt="facebook"></a>
+            <a href="https://www.instagram.com/"> <img src="../threadsImages/instagram.jpg" alt="Instagram"></a>
         </div>
 
     </footer>
