--- a/finalWebpage/threadsHomePage.html
+++ b/finalWebpage/threadsHomePage.html
@@ -96,10 +96,10 @@
         </div>
         <div class="row3">
             <h3>Social Media</h3>
-            <a href="https://twitter.com/explore"> <img src="../threadsImages/twitter.jpg" alt="twitter"></a>
-            <a href="https://www.snapchat.com/"><img src="../threadsImages/snapchat.png" alt="snapchat"></a>
-            <a href="https://www.facebook.com/"><img src="../threadsImages/facebook.png" alt="facebook"></a>
-            <a href="https://www.instagram.com/"> <img src="../threadsImages/instagram.jpg" alt="Instagram"></a>
+            <a href="https://twitter.com/explore"> <img src="threadsImages/twitter.jpg" alt="twitter"></a>
+            <a href="https://www.snapchat.com/"><img src="threadsImages/snapchat.png" alt="snapchat"></a>
+            <a href="https://www.facebook.com/"><img src="threadsImages/facebook.png" alt="facebook"></a>
+            <a href="https://www.instagram.com/"> <img src="threadsImages/instagram.jpg" alt="Instagram"></a>
 
         </div>
 
